Refactor Cirugia and Quirofano controllers; implement CirugiaRequestDto and CirugiaResponseDTO for improved data handling and mapping; add CirugiaMapper for entity conversion; enhance service layer with new create method and batch patient retrieval.